datasrc.yml
apiVersion: v1
kind: Namespace

metadata:
  name: prod


---
# Headless Service for StatefulSet

apiVersion: v1
kind: Service

metadata:

  name: mysql

  namespace: prod


spec:

  clusterIP: None

  selector:

    app: mysql


  ports:

    - name: mysql

      port: 3306

      targetPort: 3306



---
# MySQL StatefulSet

apiVersion: apps/v1
kind: StatefulSet

metadata:

  name: mysql

  namespace: prod


spec:

  serviceName: mysql

  replicas: 1


  selector:

    matchLabels:

      app: mysql


  template:

    metadata:

      labels:

        app: mysql


    spec:

      containers:

      - name: mysql

        image: mysql:8.0


        ports:

        - name: mysql

          containerPort: 3306



        volumeMounts:


        - name: mysql-storage

          mountPath: /var/lib/mysql



        readinessProbe:

          exec:

            command:

            - sh

            - -c

            - mysqladmin ping -h localhost -uroot -p$MYSQL_ROOT_PASSWORD


          initialDelaySeconds: 30

          periodSeconds: 10



        livenessProbe:

          exec:

            command:

            - sh

            - -c

            - mysqladmin ping -h localhost -uroot -p$MYSQL_ROOT_PASSWORD


          initialDelaySeconds: 60

          periodSeconds: 20



        resources:


          requests:

            cpu: "250m"

            memory: "512Mi"


          limits:

            cpu: "500m"

            memory: "1Gi"



      volumes:


      - name: mysql-storage

        persistentVolumeClaim:

          claimName: mysql-pvc
