ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-ingress
  namespace: prod

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - host: 172.31.46.206

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: spring-service

            port:

              number: 80
